--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
     background-position: center center;
 }
 
+
 * { 
     margin: 0;
     padding: 0;
@@ -45,7 +46,7 @@ nav:hover{
 ul {
     display: flex;
     list-style-type: none;
-    width: 500px;
+    min-width: 500px;
     justify-content: space-around;
     font-size: 30px;
     margin-top: 37px;
